[gd_scene load_steps=4 format=3 uid="uid://g5nmapmpmw6v"]

[ext_resource type="Script" path="res://game_controller.gd" id="1_8uaah"]
[ext_resource type="PackedScene" uid="uid://btakum1qc8ovv" path="res://map.tscn" id="3_2j6hj"]
[ext_resource type="PackedScene" uid="uid://bhuosep1twjl0" path="res://control.tscn" id="3_5g63j"]

[node name="GameController" type="Node2D"]
script = ExtResource("1_8uaah")

[node name="Control" parent="." instance=ExtResource("3_5g63j")]

[node name="Info" type="Node2D" parent="."]

[node name="PlayerLabel" type="Label" parent="Info"]
offset_left = 217.0
offset_top = 14.0
offset_right = 358.0
offset_bottom = 58.0

[node name="Map" parent="." instance=ExtResource("3_2j6hj")]
position = Vector2(102, -139)

[connection signal="dice_rolled" from="Control" to="." method="_on_dice_rolled"]
